# -*- Makefile -*-
# $HeadURL: http://rads-svn.sce.carleton.ca:8080/svn/lqn/trunk-V5/parasol/Makefile.am $
# 
# Make file for Parasol simulator libraries, tests, tools, and examples
# ------------------------------------------------------------------------
# $Id: Makefile.am 15207 2021-12-13 15:50:07Z greg $
# ------------------------------------------------------------------------

SUBDIRS = src doc include tests 
ls -l EXTRA_DIST = README NEWS ChangeLog AUTHORS COPYING 
