# -*- Makefile -*-
# $HeadURL: http://rads-svn.sce.carleton.ca:8080/svn/lqn/trunk-V5/parasol/Makefile.am $
# 
# Make file for Parasol simulator libraries, tests, tools, and examples
# ------------------------------------------------------------------------
# $Id: Makefile.am 15210 2021-12-13 16:22:36Z greg $
# ------------------------------------------------------------------------

SUBDIRS = src doc include tests 
EXTRA_DIST = README NEWS ChangeLog AUTHORS COPYING 
