# -*- Makefile -*-
# $HeadURL: http://rads-svn.sce.carleton.ca:8080/svn/lqn/trunk/parasol/Makefile.am $
# 
# Make file for Parasol simulator libraries, tests, tools, and examples
# ------------------------------------------------------------------------
# $Id: Makefile.am 15456 2022-03-09 15:06:35Z greg $
# ------------------------------------------------------------------------

SUBDIRS = src doc include/parasol tests 
EXTRA_DIST = README NEWS ChangeLog AUTHORS COPYING 
